fea-rs/test-data/compile-tests/mini-latin/bad/variation_undefined_condset.fea
variation oops my_conditions {
    pos a b 3;
} oops;

