fea-rs/test-data/compile-tests/mini-latin/bad/variation_undefined_condset.ERR
error: undefined conditionset
in ./test-data/compile-tests/mini-latin/bad/variation_undefined_condset.fea at 1:15
  | 
1 | variation oops my_conditions {
  |                ^^^^^^^^^^^^^
